src/assets/styles/gausselin.css
.gausselin-paper {
  width: 25em;
  max-width: 90%;
  display: inline-block;
  height: fit-content;
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
}

.gausselin-paper>table {
  width: 100%;
  height: 100%;
  border-collapse: collapse;
  border-style: hidden;
}

.gausselin-paper>table td {
  border: 1px solid rgb(222, 222, 222);
}

.gausselin-paper td:first-child {
  width: 30%;
  text-align: right;
  padding-right: 1em;
}

.gausselin-paper td:last-child {
  padding-left: 1em;
  padding-right: 1em;
}

#gausselin-root {
  height: calc(100% - 3.5em);
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 1.2em;
}

#gausselin-root .gausselin-paper+.gausselin-paper {
  margin-top: 1.5em;
}

#gausselin-root>Button {
  width: 25rem;
  max-width: 90%;
  margin-bottom: 1.5em;
}

#gausselin-root>nav {
  margin-top: 1.2em;
  padding-bottom: 1.2em;
}

#gausselin-review-form * tr {
  height: 3em;
}

#gausselin-review-form>button {
  margin-top: 1em;
  float: right;
}

#gausselin-review-form * tr>td:nth-of-type(1) {
  text-align: right;
  padding-right: 1em;
}

#gausselin-review-form * input {
  width: 12em;
}

#gausselin-review-form #stars-td>div {
  display: flex;
  flex-direction: row;
  width: 12em;
}

#gausselin-review-form #review-td>div {
  width: 12em;
}

